@@ -256,11 +256,18 @@ extern void voice_task(void* pdata) ;
 #define	V_DB						55
 #define	V_METRES				56
 #define	V_METRE					57
+#define	V_NOTELEM				58
 
 
 #define V_HUNDRED			 100
 
 
+#define V_HUNDRED			 100
+
+#if defined NMEA
+  #define V_ALTITUDE				170
+  #define V_DISTANCE				171
+#endif
 
 
 
