@@ -39,6 +39,9 @@
 
 #include "AT91SAM3S4.h"
 #include "board.h"
+#ifndef SIMU
+ 	#include "core_cm3.h"
+#endif
 #include "sound.h"
 #include "ersky9x.h"
 #include "myeeprom.h"
