@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "22.08.2012"
-#define TIME_STR "18:13:57"
-#define SUB_VERS 1061-Mike
-#define SVN_VERS "ersky9x-r100"
+#define DATE_STR "27.08.2012"
+#define TIME_STR "22:01:26"
+#define SUB_VERS 1070-Mike
+#define SVN_VERS "ersky9x-r105"
 #define MOD_VERS "REVB"
